# stochss-compute

./: .api.dockerfile  .cloud.dockerfile  .coveragerc  .dockerignore  .env  .examples.dockerfile  .gitignore  .pylintrc  CONTRIBUTORS.md  DASKCONFIG  Dockerfile  README.md  TODO  _ideas.txt  api.dockerfile  api.dockerignore  api_deployment.yaml  app.py  dask_deployment.yaml  dask_plugin.py  dask_worker_spec.yaml  daskconfig  daskconfigTEST  demo.ipynb  docker-build.sh  docker-compose.yml  ec2.py  examples.Dockerfile  examples.dockerfile  examples.dockerignore  file.py  gen_lockfile.sh  launch.sh  pyproject.toml  rebuild.sh  redis_deployment.yaml  requirements.txt  setup.cfg  setup.py  sssc_ec2.py  (+5 more)
docker/: .env  api.dockerfile  dask.dockerfile  docker-compose.yml
docs/: Makefile  conf.py  index.rst
examples/: AWS.ipynb  Lactose.ipynb  PW000142.sbml  README.ipynb  README.md  Server-retry.ipynb  StartHere.ipynb  Tutorial-1.ipynb  Tutorial-AWS.ipynb  Tutorial.ipynb  Tutorial0.ipynb  Tutorial_1-Local.ipynb  Tutorial_2-AWS.ipynb  Tutorial_3-AWS+S3.ipynb  Tutorial_3-concurrency.ipynb  Two-Substrate.ipynb  aws_trust_policy.json  demo.ipynb  ec2_testing.ipynb  ec2_testing1.ipynb  ec2_testing2.ipynb  ec2_testing3.ipynb  ec2_testing4.ipynb  minikube.ipynb  notes.txt  s3_trust_policy.json
kubernetes/: api_deployment.yaml  dask_deployment.yaml  dask_worker_spec.yaml  redis_deployment.yaml
scripts/: stochss-compute  stochss-compute-cluster
sssc/: api.py  api_server.py  app.py  compute_server.py  messages.py  remote_results.py  remote_simulation.py  server.py  sssc_server.py  test.py
stochss_compute/: __init__.py  __version__.py  compute_server.py  launch.py  remote_results.py  remote_simulation.py  remote_utils.py  scripts.py
stochss_compute-old/: __init__.py
stochss_remote/: __init__.py  dep_cache.py  job_manager.py  model.py  sim_cache.py  solver.py
test/: __init__.py  run_integration_tests.py  run_system_tests.py  run_unit_tests.py  test.sh
tests/: ensemble_test.py  (+1 more)
(+185 files in other folders)
