[tool.poetry]
name = "stochss-remote"
version = "0.1.0"
description = "A remote server server for the StochSS family of stochastic simulators."
authors = ["Ethan Green <egreen4@unca.edu>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
requests = "^2.25.1"
poetry = "^1.1.5"
gillespy2 = "^1.5.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
stochss-remote = "stochss_remote.api:server_start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
